# pailliercryptolib

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  add_pci_vf.xml  he_qat_bn_ops.c  he_qat_bn_ops.h  he_qat_context.c  he_qat_context.h  he_qat_misc.cpp  he_qat_misc.h  he_qat_types.h  he_qat_utils.c  he_qat_utils.h  run.sh  setup_devices.sh  signit.txt  start_qat_dev.sh  stop_qat_dev.sh  telemetry_helper.sh  test_bnConversion.cpp  test_bnModExpPerformOp.c  test_context.c
.github/workflows/: github-ci.yml
benchmark/: CMakeLists.txt  bench_cryptography.cpp  bench_cryptography_omp.cpp  bench_hybrid.cpp  bench_ops.cpp  bench_ops_omp.cpp  main.cpp
cmake/: cereal.cmake  cpufeatures.cmake  gbenchmark.cmake  gtest.cmake  ippcrypto.cmake  ippcrypto_patch.patch  qat_config.cmake  qatconfig.cmake
cmake/he_qat/: HE_QATConfig.cmake.in  he_qatConfig.cmake  heqat-util.cmake
cmake/he_qat-0.1.0/: HE_QATConfig.cmake
cmake/heqat/: heqat.cmake
cmake/heqat/icp/: CMakeLists.txt
cmake/ipcl/: IPCLConfig.cmake.in  ipcl-util.cmake
cmake/patch/: ippcrypto_patch.patch
common/: CMakeLists.txt
config/: 4xxx_dev0.conf  4xxx_dev1.conf  4xxx_dev2.conf  4xxx_dev3.conf  4xxx_dev4.conf  4xxx_dev5.conf  4xxx_dev6.conf  4xxx_dev7.conf
config/1inst1dev/: 4xxx_dev0.conf  4xxx_dev1.conf  4xxx_dev2.conf  4xxx_dev3.conf  4xxx_dev4.conf  4xxx_dev5.conf  4xxx_dev6.conf  4xxx_dev7.conf
config/2inst1dev/: 4xxx_dev0.conf  4xxx_dev1.conf  4xxx_dev2.conf  4xxx_dev3.conf  4xxx_dev4.conf  4xxx_dev5.conf  4xxx_dev6.conf  4xxx_dev7.conf
config/8inst/: 4xxx_dev0.conf
doc/: CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in  index.rst
example/: CMakeLists.txt  README.md  example.cpp  example_add_mul.cpp  example_encrypt_decrypt.cpp  example_hybridmode.cpp  test.cpp  test.h
examples/: CMakeLists.txt  test_bnConversion.cpp
he_qat/: CMakeLists.txt  he_qat_bn_ops.c  he_qat_cb.c  he_qat_context.c  he_qat_ctrl.c  he_qat_gvars.c  he_qat_ops.c  he_qat_utils.c
he_qat/include/: he_qat_bn_ops.h  he_qat_context.h  he_qat_gconst.h  he_qat_types.h  he_qat_utils.h
heqat/: CMakeLists.txt  bnops.c  cb.c  context.c  ctrl.c
heqat/common/: CMakeLists.txt  cpa_sample_utils.c  utils.c
heqat/include/heqat/: bnops.h  common.h  context.h  heqat.h  misc.h
heqat/include/heqat/common/: consts.h  types.h  utils.h
heqat/misc/: CMakeLists.txt  bignum.cpp  misc.cpp  utils.cpp
icp/: CMakeLists.txt
include/: cpa_sample_cnv_utils.h  cpa_sample_utils.h
ipcl/: CMakeLists.txt  base_text.cpp  bignum.cpp  ciphertext.cpp  common.cpp  context.cpp  key_pair.cpp  keygen.cpp  mod_exp.cpp  ops.cpp  paillier_keygen.cpp  paillier_ops.cpp  paillier_pri.cpp  paillier_prikey.cpp  paillier_pub.cpp  paillier_pubkey.cpp  plaintext.cpp  pri_key.cpp  pub_key.cpp  util.cpp
ipcl/include/ipcl/: base_text.hpp  bignum.h  ciphertext.hpp  common.hpp  context.hpp  ipcl.hpp  key_pair.hpp  keygen.hpp  mod_exp.hpp  ops.hpp  paillier_keygen.hpp  paillier_ops.hpp  paillier_prikey.hpp  paillier_pubkey.hpp  plaintext.hpp  pri_key.hpp  pub_key.hpp  util.hpp
ipcl/include/ipcl/utils/: common.hpp  context.hpp  parse_cpuinfo.hpp  serialize.hpp  util.hpp
ipcl/utils/: common.cpp  context.cpp  parse_cpuinfo.cpp  util.cpp
ln_mod_exp/: CMakeLists.txt  cpa_mod_exp_sample.c  cpa_mod_exp_sample_user.c  qat_modexp_validation.c
misc/: CMakeLists.txt  bignum.cpp  bignum.h  he_qat_misc.cpp  he_qat_misc.h  utils.cpp
module/: heqat.cmake
module/heqat/: .gitignore  CMakeLists.txt  README.md  setup_env.sh
module/heqat/cmake/: qatconfig.cmake
module/heqat/common/: CMakeLists.txt  cpa_sample_utils.c
module/heqat/config/: 4xxx_dev0.conf  4xxxvf_dev0.conf
module/heqat/doc/: CMakeLists.txt  Doxyfile.in  index.rst
module/heqat/example/: CMakeLists.txt  README.md  example.cpp
module/heqat/he_qat/: CMakeLists.txt  he_qat_cb.c  he_qat_context.c
module/heqat/he_qat/include/: he_qat_context.h
module/heqat/heqat/: CMakeLists.txt  bnops.c  cb.c  context.c  ctrl.c
module/heqat/heqat/common/: utils.c
module/heqat/heqat/include/heqat/: bnops.h  common.h  context.h  heqat.h
module/heqat/heqat/include/heqat/common/: consts.h  types.h  utils.h
module/heqat/heqat/include/heqat/misc/: bignum.h  utils.h
module/heqat/heqat/misc/: CMakeLists.txt  bignum.cpp  misc.cpp
module/heqat/icp/: CMakeLists.txt
module/heqat/samples/: CMakeLists.txt  test_bnModExp.cpp
module/heqat/scripts/: auto_find_qat_install.sh  reset_asym_buffer_size.sh  restart_devices.sh  run.sh  setup_devices.sh
module/heqat/test/: CMakeLists.txt  test_BIGNUMModExp.c  test_bnConversion.cpp  test_bnModExp.cpp  test_bnModExp_MT.cpp  test_context.c
perf_data/: bs1bit1024.txt  bs1bit8192.txt  bs8bit1024.txt  bs8bit4096.txt  bs8bit8192.txt
profiling/: README.md
samples/: CMakeLists.txt  test_BIGNUMModExp.c  test_bnConversion.cpp  test_bnModExp.cpp  test_bnModExpBatch.cpp  test_bnModExpPerformOp.c  test_bnModExp_MT.cpp  test_context.c
scripts/: auto_find_qat_install.sh  restart_devices.sh  run.sh  setup_devices.sh
test/: CMakeLists.txt  main.cpp  test.cpp  test_cryptography.cpp  test_cryptography_omp.cpp  test_omp.cpp  test_ops.cpp  test_ops_omp.cpp  test_serialization.cpp
utils/: CMakeLists.txt
